syntax = "proto3";

package basic_message;

message BasicMessage {
  string stringProperty = 1;
  int32 intProperty = 2;
  float floatProperty = 3;
  bool boolProperty = 4;
}